--- a/PressHmi/View/Message/MessageMainPage.xaml
+++ b/PressHmi/View/Message/MessageMainPage.xaml
@@ -5,14 +5,14 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PressHmi.View"
       mc:Ignorable="d" 
-      d:DesignHeight="684" d:DesignWidth="944"
+      d:DesignHeight="830" d:DesignWidth="1770"
       Title="MessageMainPage">
     
     <Border CornerRadius="3" Background="{DynamicResource ContentPanelBackground}" Margin="2,3,2,3">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition/>
-                <RowDefinition Height="70"/>
+                <RowDefinition Height="100"/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
                 <Frame   Background="Transparent" NavigationUIVisibility="Hidden" Content="{Binding _MessagePanel}"></Frame>
@@ -28,28 +28,28 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <ToggleButton Grid.Column="0" Style="{StaticResource ParaMenuNormalButton}"
+                <ToggleButton Grid.Column="0" Style="{StaticResource ParaMenuNormalButton}" FontSize="{StaticResource TextPrimerSize}"
                       Content="{Binding MessageMenu1}" IsChecked="{Binding MessageMenu1Cheched}" 
                       Visibility="{Binding MessageMenu1.Visibility}" Command="{Binding MessageMenu1.Cmd}"/>
-                <ToggleButton Grid.Column="1" Style="{StaticResource ParaMenuNormalButton}" 
+                <ToggleButton Grid.Column="1" Style="{StaticResource ParaMenuNormalButton}"  FontSize="{StaticResource TextPrimerSize}"
                       Content="{Binding MessageMenu2}" IsChecked="{Binding MessageMenu2Cheched}" 
                       Visibility="{Binding MessageMenu2.Visibility}" Command="{Binding MessageMenu2.Cmd}"/>
-                <ToggleButton Grid.Column="2" Style="{StaticResource ParaMenuNormalButton}" 
+                <ToggleButton Grid.Column="2" Style="{StaticResource ParaMenuNormalButton}"  FontSize="{StaticResource TextPrimerSize}"
                       Content="{Binding MessageMenu3}" IsChecked="{Binding MessageMenu3Cheched}" 
                       Visibility="{Binding MessageMenu3.Visibility}" Command="{Binding MessageMenu3.Cmd}"/>
-                <ToggleButton Grid.Column="3" Style="{StaticResource ParaMenuNormalButton}" 
+                <ToggleButton Grid.Column="3" Style="{StaticResource ParaMenuNormalButton}"  FontSize="{StaticResource TextPrimerSize}"
                       Content="{Binding MessageMenu4}" IsChecked="{Binding MessageMenu4Cheched}" 
                       Visibility="{Binding MessageMenu4.Visibility}" Command="{Binding MessageMenu4.Cmd}"/>
-                <ToggleButton Grid.Column="4" Style="{StaticResource ParaMenuNormalButton}" 
+                <ToggleButton Grid.Column="4" Style="{StaticResource ParaMenuNormalButton}"  FontSize="{StaticResource TextPrimerSize}"
                       Content="{Binding MessageMenu5}" IsChecked="{Binding MessageMenu5Cheched}" 
                       Visibility="{Binding MessageMenu5.Visibility}" Command="{Binding MessageMenu5.Cmd}"/>
-                <ToggleButton Grid.Column="5" Style="{StaticResource ParaMenuNormalButton}" 
+                <ToggleButton Grid.Column="5" Style="{StaticResource ParaMenuNormalButton}"  FontSize="{StaticResource TextPrimerSize}"
                       Content="{Binding MessageMenu6}" IsChecked="{Binding MessageMenu6Cheched}" 
                       Visibility="{Binding MessageMenu6.Visibility}" Command="{Binding MessageMenu6.Cmd}"/>
-                <ToggleButton Grid.Column="6" Style="{StaticResource ParaMenuNormalButton}" 
+                <ToggleButton Grid.Column="6" Style="{StaticResource ParaMenuNormalButton}"  FontSize="{StaticResource TextPrimerSize}"
                       Content="{Binding MessageMenu7}" IsChecked="{Binding MessageMenu7Cheched}" 
                       Visibility="{Binding MessageMenu7.Visibility}" Command="{Binding MessageMenu7.Cmd}"/>
-                <ToggleButton Grid.Column="7" Style="{StaticResource ParaMenuNormalButton}" 
+                <ToggleButton Grid.Column="7" Style="{StaticResource ParaMenuNormalButton}"  FontSize="{StaticResource TextPrimerSize}"
                       Content="{Binding MessageMenu8}" IsChecked="{Binding MessageMenu8Cheched}" 
                       Visibility="{Binding MessageMenu8.Visibility}" Command="{Binding MessageMenu8.Cmd}"/>
 
