--- a/PressHmi/View/Styles/ParaStyle.xaml
+++ b/PressHmi/View/Styles/ParaStyle.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+
     <Style x:Key="MyParaButtonBase" BasedOn="{x:Null}" TargetType="{x:Type ButtonBase}">
         <Setter Property="Focusable" Value="False"></Setter>
     </Style>
@@ -31,7 +33,7 @@
                     <Border x:Name="border" CornerRadius="0,0,5,5" BorderThickness="1,0,1,2" BorderBrush="{DynamicResource ParaMenuBorder}"
 						SnapsToDevicePixels="False" Background="{DynamicResource ParaMenuBackground}">
                         <Grid>
-                            <TextBlock x:Name="text2" FontSize="{DynamicResource TextPrimerSize}" Margin="5"  FontFamily="Microsoft YaHei UI Light"
+                            <TextBlock x:Name="text2" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}" Margin="5"  FontFamily="Microsoft YaHei UI Light"
                                         HorizontalAlignment="Center" VerticalAlignment="Center"
 										Text="{Binding Content.Text, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
 										Foreground="{DynamicResource ParaMenuForeground}"/>
@@ -78,10 +80,69 @@
                     <Border x:Name="border" CornerRadius="3" BorderThickness="0" BorderBrush="{DynamicResource ParaInputCheckedBorder}"
 						SnapsToDevicePixels="False" Background="{DynamicResource ParaInputBackground}">
                         <Grid>
-                            <TextBlock x:Name="text2" FontSize="16" Margin="5"  FontFamily="Microsoft YaHei UI Light"
-                                        HorizontalAlignment="Left" VerticalAlignment="Center"
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="80"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" x:Name="text2" Margin="10,5,5,5"  FontFamily="Microsoft YaHei UI Light"
+                                        HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}"
 										Text="{Binding Content, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
 										Foreground="{DynamicResource ParaInputForeground}"/>
+                            <TextBlock Grid.Column="1" x:Name="text3" Margin="0,0,5,0"
+                                        HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+										Text="{Binding Tag, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
+										Foreground="Gray" Style="{DynamicResource FontAwesome}"/>
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="border" Property="BorderThickness" Value="1" />
+                            <Setter TargetName="text2" Property="Foreground" Value="{DynamicResource MenuPressedForeground}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="IONormalButtonFocusVisual">
+        <Setter Property="Control.Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Control}">
+                    <Grid Margin="4 2">
+                        <Rectangle x:Name="r1" StrokeThickness="1" Stroke="Black" StrokeDashArray="2 2"/>
+                        <Border x:Name="border" Width="{TemplateBinding ActualWidth}" Height="{TemplateBinding ActualHeight}"  CornerRadius="2" BorderThickness="1" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="IONormalButton" BasedOn="{StaticResource MyParaButtonBase}"  TargetType="{x:Type Button}">
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="FontFamily" Value="YouYuan"/>
+        <Setter Property="FontSize" Value="{DynamicResource MenuButtonFontSize}"/>
+        <Setter Property="FontWeight" Value="Normal"/>
+        <Setter Property="FocusVisualStyle" Value="{StaticResource ParaInputNormalButtonFocusVisual}" />
+        <Setter Property="Background" Value="{DynamicResource ParaInputBackground}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="border" CornerRadius="3" BorderThickness="0" BorderBrush="{DynamicResource ParaInputCheckedBorder}"
+						SnapsToDevicePixels="False" Background="{Binding Background, RelativeSource={RelativeSource Mode=TemplatedParent}}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="80"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock x:Name="text2" Margin="10,5,5,5"  FontFamily="Microsoft YaHei UI Light" Grid.ColumnSpan="2" Panel.ZIndex="10"
+                                        HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+										Text="{Binding Content, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
+										Foreground="{Binding Foreground, RelativeSource={RelativeSource Mode=TemplatedParent}}"/>
+                            <TextBlock Grid.Column="1" x:Name="text3" Margin="5,0,5,0" Panel.ZIndex="20"
+                                        HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+										Text="{Binding Tag, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
+										Foreground="LightGray" Style="{DynamicResource FontAwesome}"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -121,10 +182,19 @@
                     <Border x:Name="border" CornerRadius="0" BorderThickness="0" BorderBrush="{DynamicResource ParaInputCheckedBorder}"
 						SnapsToDevicePixels="False" Background="{DynamicResource ParaInputBackground}">
                         <Grid>
-                            <TextBlock x:Name="text2" FontSize="16" Margin="5"  FontFamily="Microsoft YaHei UI Light"
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="80"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock x:Name="text2" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
+                                       Margin="5"  FontFamily="Microsoft YaHei UI Light" Grid.ColumnSpan="2" Panel.ZIndex="10"
                                         HorizontalAlignment="Center" VerticalAlignment="Center"
 										Text="{Binding Content, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
 										Foreground="{DynamicResource ParaInputForeground}"/>
+                            <TextBlock Grid.Column="0" x:Name="text3" Margin="5,0,5,0" Panel.ZIndex="20"
+                                        HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+										Text="{Binding Tag, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
+										Foreground="Gray" Style="{DynamicResource FontAwesome}"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -164,7 +234,7 @@
                     <Border x:Name="border" CornerRadius="0" BorderThickness="0" BorderBrush="{DynamicResource ParaInputCheckedBorder}"
 						SnapsToDevicePixels="False" Background="{DynamicResource ParaListInputBackground}">
                         <Grid>
-                            <TextBlock x:Name="text2" FontSize="12" Margin="5"  FontFamily="Microsoft YaHei UI Light"
+                            <TextBlock x:Name="text2" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}" Margin="5"  FontFamily="Microsoft YaHei UI Light"
                                         HorizontalAlignment="Center" VerticalAlignment="Center"
 										Text="{Binding Content, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
 										Foreground="{DynamicResource ParaInputForeground}"/>
@@ -298,18 +368,18 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
                     <Border x:Name="border" CornerRadius="0,0,0,0" BorderThickness="1" BorderBrush="{DynamicResource ParaClampDefalutBorder}"
-						SnapsToDevicePixels="False" Background="{DynamicResource ParaClampDefalutBackground}">
+						SnapsToDevicePixels="False" Background="{Binding Background, RelativeSource={RelativeSource Mode=TemplatedParent}}">
                         <Grid>
                             <TextBlock x:Name="text2" FontSize="{DynamicResource TextSmallSize}" Margin="0"  FontFamily="Microsoft YaHei UI Light"
                                         HorizontalAlignment="Center" VerticalAlignment="Center"
 										Text="{Binding Content, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-										Foreground="{DynamicResource ParaClampDefalutForeground}"/>
+										Foreground="White"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="True">
-                            <Setter TargetName="border" Property="Background" Value="{DynamicResource ParaClampCheckedBackground}" />
-                            <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ParaClampCheckedBorder}" />
+                            <!--<Setter TargetName="border" Property="Background" Value="{DynamicResource ParaClampCheckedBackground}" />
+                            <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ParaClampCheckedBorder}" />-->
                             <Setter TargetName="text2" Property="Foreground" Value="{DynamicResource ParaClampCheckedForeground}" />
                         </Trigger>
                         <Trigger Property="IsPressed" Value="True">
