--- a/PressHmi/View/System/SystemInfoPage.xaml
+++ b/PressHmi/View/System/SystemInfoPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PressHmi.View"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="730" d:DesignWidth="1770"
       Title="SystemInfoPage">
     <Page.Resources>
         <Style TargetType="{x:Type TextBlock}">
@@ -18,113 +18,153 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Grid Margin="2,2,2,2">
+        <Grid Margin="2,2,1,1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelNormalBackground}">
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0" FontSize="{DynamicResource TextSmallSize}"
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0" FontSize="{DynamicResource TextPrimerSize}"
                                    Text="基本设置"/>
             </Border>
             <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource HmiBorder}">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="45"/>
-                        <RowDefinition Height="45"/>
-                        <RowDefinition Height="45"/>
-                        <RowDefinition Height="45"/>
-                        <RowDefinition Height="45"/>
+                        <RowDefinition Height="78"/>
+                        <RowDefinition Height="78"/>
+                        <RowDefinition Height="78"/>
+                        <RowDefinition Height="78"/>
+                        <RowDefinition Height="78"/>
                         
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="380"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Grid.Row="0" FontSize="{DynamicResource TextSmallSize}" Text="IP:" />
-                    <Button Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="240" Height="30" Style="{StaticResource ParaInputNormalButton}"
+                    <TextBlock Grid.Column="0" Grid.Row="0" FontSize="{DynamicResource TextPrimerSize}" Text="IP地址:" />
+                    <Button Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
                                Content="{Binding Ip}" Command="{Binding ShowDialogCommand}" CommandParameter="Ip"/>
-                    
-                    <TextBlock  Grid.Row="1" FontSize="{DynamicResource TextSmallSize}" Text="Port:" />
-                    <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="240" Height="30" Style="{StaticResource ParaInputNormalButton}"
+
+                    <TextBlock  Grid.Row="1" FontSize="{DynamicResource TextPrimerSize}" Text="端口号:" />
+                    <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
                                Content="{Binding Port}" Command="{Binding ShowDialogCommand}" CommandParameter="Port"/>
 
-                    <TextBlock  Grid.Row="2" FontSize="{DynamicResource TextSmallSize}" Text="Timeout:" />
-                    <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="240" Height="30" Style="{StaticResource ParaInputNormalButton}"
+                    <TextBlock  Grid.Row="2" FontSize="{DynamicResource TextPrimerSize}" Text="TIME OUT:" />
+                    <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
                                Content="{Binding Timeout}" Command="{Binding ShowDialogCommand}" CommandParameter="Timeout"/>
 
-                    <TextBlock  Grid.Row="3" FontSize="{DynamicResource TextSmallSize}" Text="Increment:" />
-                    <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="240" Height="30" Style="{StaticResource ParaInputNormalButton}"
+                    <TextBlock  Grid.Row="3" FontSize="{DynamicResource TextPrimerSize}" Text="检测单位:" />
+                    <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
                                Content="{Binding Increment}" Command="{Binding ShowDialogCommand}" CommandParameter="Increment"/>
-
-
-                    <TextBlock Grid.Column="0" Grid.Row="4" FontSize="{DynamicResource TextSmallSize}" Text="CsdFolder:" />
-
-                    <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding CsdFolder}" Width="240" Height="30" />
-         
-
 
                 </Grid>
             </Border>
         </Grid>
 
-        <Grid Margin="2,2,2,2" Grid.Column="1">
+        <Grid Margin="1,2,2,1" Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
                         BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelNormalBackground}">
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0" FontSize="{DynamicResource TextSmallSize}"
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0" FontSize="{DynamicResource TextPrimerSize}"
                                    Text="参数设置"/>
             </Border>
             <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource HmiBorder}">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="45"/>
-                        <RowDefinition Height="45"/>
-                        <RowDefinition Height="45"/>
-                        <RowDefinition Height="45"/>
+                        <RowDefinition Height="78"/>
+                        <RowDefinition Height="78"/>
+                        <RowDefinition Height="78"/>
+                        <RowDefinition Height="78"/>
                       
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="240"/>
+                        <ColumnDefinition Width="380"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Grid.Row="0" FontSize="{DynamicResource TextSmallSize}" Text="SciChartXTimeMax:" />
-                    <Button Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="160" Height="30" Style="{StaticResource ParaInputNormalButton}"
+                    <TextBlock Grid.Column="0" Grid.Row="0" FontSize="{DynamicResource TextPrimerSize}" Text="绘图时间范围(ms):" />
+                    <Button Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
                                Content="{Binding SciChartXTimeMax}" Command="{Binding ShowDialogCommand}" CommandParameter="SciChartXTimeMax"/>
 
-                    <TextBlock  Grid.Row="1" FontSize="{DynamicResource TextSmallSize}" Text="RealTimeSciChartInflgAdrType:" />
-                    <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="160" Height="30" Style="{StaticResource ParaInputNormalButton}"
+                    <TextBlock  Grid.Row="1" FontSize="{DynamicResource TextPrimerSize}" Text="绘图用PMC地址类型:" />
+                    <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
                                Content="{Binding RealTimeSciChartInflgAdrType}" Command="{Binding ShowDialogCommand}" CommandParameter="RealTimeSciChartInflgAdrType"/>
 
-                    <TextBlock  Grid.Row="2" FontSize="{DynamicResource TextSmallSize}" Text="RealTimeSciChartInflgAdr:" />
-                    <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="160" Height="30" Style="{StaticResource ParaInputNormalButton}"
+                    <TextBlock  Grid.Row="2" FontSize="{DynamicResource TextPrimerSize}" Text="绘图用PMC地址:" />
+                    <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
                                Content="{Binding RealTimeSciChartInflgAdr}" Command="{Binding ShowDialogCommand}" CommandParameter="RealTimeSciChartInflgAdr"/>
 
-                    <TextBlock  Grid.Row="3" FontSize="{DynamicResource TextSmallSize}" Text="RealTimeSciChartInflgBit:" />
-                    <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="10,0,10,0" 
-                               FontSize="{DynamicResource TextPrimerSize}" Width="160" Height="30" Style="{StaticResource ParaInputNormalButton}"
+                    <TextBlock  Grid.Row="3" FontSize="{DynamicResource TextPrimerSize}" Text="绘图用PMC地址位:" />
+                    <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
+                               FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
                                Content="{Binding RealTimeSciChartInflgBit}" Command="{Binding ShowDialogCommand}" CommandParameter="RealTimeSciChartInflgBit"/>
 
 
                 
+
+
+
+                </Grid>
+            </Border>
+        </Grid>
+
+        <Grid Margin="2,1,2,2" Grid.Row="1" Grid.ColumnSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" BorderThickness="1,1,1,1" Margin="1,1,1,0"
+                        BorderBrush="{DynamicResource HmiBorder}" Background="{DynamicResource ContentPanelNormalBackground}">
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,0,0" FontSize="{DynamicResource TextPrimerSize}"
+                                   Text="其他设定"/>
+            </Border>
+            <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
+                        BorderBrush="{DynamicResource HmiBorder}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="78"/>
+                        <RowDefinition Height="78"/>
+                        <RowDefinition Height="78"/>
+                        <RowDefinition Height="78"/>
+
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="380"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Grid.Column="0" Grid.Row="0" FontSize="{DynamicResource TextPrimerSize}" Text="CSD软件安装目录:" />
+
+                    <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding CsdFolder}" Width="1200" Height="60" FontSize="{StaticResource TextPrimerSize}"
+                             HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="1" FontSize="{DynamicResource TextPrimerSize}" Text="工艺配方保存目录:" />
+
+                    <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding CsdFolder}" Width="1200" Height="60" FontSize="{StaticResource TextPrimerSize}"
+                             HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="2" FontSize="{DynamicResource TextPrimerSize}" Text="丝杠滑块位置对应表:" />
+
+                    <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding CsdFolder}" Width="1200" Height="60" FontSize="{StaticResource TextPrimerSize}"
+                             HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" />
 
 
 
